--- a/estilo.css
+++ b/estilo.css
@@ -36,23 +36,36 @@ h1 {
 /* Insira o código abaixo */
 
 .container1 {
-    
+    display: flex;
 }
 
 .container2 {
-    
+    display: flex;
+    justify-content: right;
 }
 
 .container3 {
-   
+   display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container4 {
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .container5 {
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 .container-6 {
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.container8{
+    display: flex;
+    margin: 0px; padding: 0;
 }
